Hj dg update (#190)
* Updated dg up till ProgramSubmissionLogicManger

* Move all dg images to new folder, ammended old descriptions

* Finish dg updates to logic

* Fix outdated Javadoc

* Add instruction to use Main class in ug, improve user feedback

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -4,7 +4,7 @@
 :toc-title:
 :toc-placement: preamble
 :sectnums:
-:imagesDir: images
+:imagesDir: images/developerguide
 :stylesDir: stylesheets
 :xrefstyle: full
 ifdef::env-github[]
@@ -91,55 +91,229 @@ The `UI` component,
 * Executes user commands using the `Logic` component.
 * Listens for changes to `Model` data so that the UI can be updated with the modified data.
 
+
 [[Design-Logic]]
-=== Logic component
+=== Logic components
 
-[[fig-LogicClassDiagram]]
-.Structure of the Logic Component
-image::LogicClassDiagram.png[]
+==== Overview
+There are 4 main logic components found in the architecture of Duke Academy. They are `CommandLogic`, `QuestionsLogic`, `ProgramSubmissionLogic` and `NotesLogic`.
+Each logic component serves as a *facade* for the basic operations by the application with regards to *Commands*, *Questions*, *ProgramSubmission* and *Notes*.
 
-*API* :
-link:{repoURL}/src/main/java/seedu/difficulty/logic/Logic.java[`Logic.java`]
+They orchestrate the execution of these operations internally and expose a simple interface for other components, such as the `UI` to utilize.
 
-.  `Logic` uses the `AddressBookParser` class to parse the user command.
-.  This results in a `Command` object which is executed by the `LogicManager`.
-.  The command execution can affect the `Model` (e.g. adding a person).
-.  The result of the command execution is encapsulated as a `CommandResult` object which is passed back to the `Ui`.
-.  In addition, the `CommandResult` object can also instruct the `Ui` to perform certain actions, such as displaying help to the user.
+The logic components are interfaces so their implementation can be changed easily.
 
-Given below is the Sequence Diagram for interactions within the `Logic` component for the `execute("delete 1")` API call.
+====
+*CommandLogic*:
+[[fig-CommandLogicClassDiagram]]
+.Class diagram of the CommandLogic interface
+image::CommandLogicClassDiagram.png[]
 
-.Interactions Inside the Logic Component for the `delete 1` Command
-image::DeleteSequenceDiagram.png[]
+- Only has one method  which is used by the application to execute commands.
+====
 
-NOTE: The lifeline for `DeleteCommandParser` should end at the destroy marker (X) but due to a limitation of PlantUML, the lifeline reaches the end of diagram.
+====
+*QuestionsLogic:*
+[[fig-QuestionLogicClassDiagram]]
+.Class diagram of the QuestionLogic interface
+image::QuestionsLogicClassDiagram.png[]
+- Deals with all CRUD operations pertaining to the questions found in the application.
+- Keeps track a _selected question_ which represents the `Question` that is currently being viewed by the user in the `UI`.
+====
+
+====
+*ProgramSubmissionLogic:*
+[[fig-ProgramSubmissionLogicClassDiagram]]
+.Class diagram of the ProgramSubmissionLogic interface
+image::ProgramSubmissionLogicClassDiagram.png[]
+- Orchestrates the evaluation of the user's program submissions.
+- Keeps track of a _currently attempting_ question which is used as the `Question` that user program submissions are tested against.
+- Uses the `UserProgramChannel` interface to enable other components such as the `UI` to serve as sources for `UserProgram` submissions without introducing them as dependencies.
+====
+
+====
+*NotesLogic:*
+[[fig-NotesLogicClassDiagram]]
+.Class diagram of the NotesLogic interface
+image::NotesLogicClassDiagram.png[]
+
+- Deals with all CRUD operations pertaining to the notes found in the application.
+- Uses the `NoteSubmissionChannel` interface to enable other components such as the `UI` to serve as sources for notes without introducing them as dependencies.
+
+*Note model:*
+[[fig-NoteClassDiagram]]
+.Class diagram of the Note class
+image::NoteClassDiagram.png[]
+
+- The note model class represents a user's note in the application.
+- It contains a *title* which provides an easy way for the user to identify and organize his or her notes
+- It contains a *content* string to represent all the text-based notes that the user has entered.
+- Each note also contains a *sketch* which the user can draw and edit within the `NoteCanvas` component. The sketch is stored as a png whose file name corresponds to the *sketchId* of the note.
+
+====
+
+==== CommandLogic implementation
+The standard implementation of the CommandLogic is the `CommandLogicManager` class.
+
+*Overview:*
+
+[[fig-CommandLogicManagerAssociations]]
+.Associations of the CommandLogicManager
+image::CommandLogicManager.png[]
+
+- This implementation works by requiring its users to register a `CommandSupplier` functional interface with a specific key.
+The command can also be registered with a `CommandFactory` which encapsulates the Key-CommandSupplier relation.
+
+- Subsequent calls to the `executeCommand()` method will attempt to match the command String to all the registered keys to
+retrieve the correct `CommandSupplier`.
+
+- Storage of these keys and the parsing of the `commandText` argument is performed by `CommandParser`.
+
+====
+* The `CommandSupplier` only accepts the arguments of the command.
+* `InvalidCommandArgumentException` is thrown if the arguments do not match the specification of the command.
+* The `CommandParser` splits the command String into the registered key and arguments in order to retrieve the corresponding command.
+====
+
+====
+[[fig-CommandLogicSequenceDiagram]]
+.Sequence diagram for command execution
+image::CommandLogicSequence.png[]
+
+*The basic sequence of command execution is as follows:*
+
+. `Command` is registered upon startup by the application driver
+
+. The command and its matching key is stored in the `CommandParser` by the `CommandLogicManager`
+
+. User enters command text
+
+. Application driver passes the command text as a String to the `CommandLogicManager`
+
+. `CommandLogicManager` passes on the command text to the `CommandParser` for parsing and `Command` retrieval
+
+. `CommandLogicManager` executes the retrieved `Command`
+====
+
+==== QuestionsLogic implementation
+The standard implementation of the `QuestionsLogic` interface is the `QuestionsLogicManager`. This implementation stores the questions
+in the application in the form of a `QuestionBank`. It saves any changes made to the `QuestionBank` immediately using a `QuestionBankStorage`.
+_(View <<Design-Storage>> for more details.)_
+
+*Overview:*
+
+[[fig-QuestionsLogicManagerAssociations]]
+.Associations of the QuestionLogicManager
+image::QuestionsLogicManager.png[]
+
+- The `QuestionsLogicManager` allows other components of the application to make changes to the current state of questions using its methods.
+
+- Other components of the application can also observe the current state of questions by getting an `ObservableList` of all the questions in the application through the `getAllQuestionsList()` and `getFilteredQuestionsList()` method.
+
+- The `ObservableList` from the `getFilteredQuestionsList()` method is a filtered list of the questions in the application. This filter can be changed by the `setFilter(predicate)` method.
+
+
+====
+* The `QuestionsLogicManager` constructor takes in a `QuestionBankStorage` instance which is used to load the initial `QuestionBank` and to save subsequent revisions to it.
+
+* The main bulk of the CRUD operations are handled by the `QuestionBank` class. the `QuestionLogicManager` orchestrate the invocation of the `QuestionBank` methods along with storage of the changes.
+====
+
+
+==== ProgramSubmissionLogic implementation
+The standard implementation of the `ProgramSubmissionLogic` is the `ProgramSubmissionLogicManager`. This implementation
+relies on the `TestExecutor` class to execute users' program submissions locally on their machine.
+_(View <<Implementation-ProgramEvaluation>> for more details.)_
+
+*Overview:*
+
+[[fig-ProgramSubmissionLogicAssociations]]
+.Associations of the ProgramSubmissionLogicManager
+image::ProgramSubmissionLogicManager.png[]
+
+- The `ProgramSubmissionLogicManager` works by keeping track of a `Question` that is "currently attempted" by the user. Subsequent calls to `submitUserProgram(userProgram)` or `submitUserProgramFromSubmissionChannel()`
+   run the user's program against test cases found in this `Question`.
+- Other components can set the "currently attempted" `Question` through the `setCurrentQuestion(question)` method.
+- Other components can observe the latest `TestResult` through an observable provided by the `getTestResultObservable()` method without having the `ProgramSubmissionLogicManager` depending on them.
+- Other components can serve as the source of the user program to be evaluated by the `ProgramSubmissionLogicManager`  by providing a functional interface `UserProgramChannel` without the `ProgramSubmissionLogicManager` having to depend on them.
+
+====
+* The `ProgramSubmissionLogicManager` instantiates the `TestExecutor` using the `StandardCompilerEnvironment`, `StandardCompiler` and `StandardProgramExecutor`.
+
+* It holds a reference to the `StandardCompilerEnvironment` so that it can close the environment and delete any temporary files that were created in the `closeSubmissionLogicManager()` method.
+
+* It is *important* that the main app driver closes the `StandardCompilerEnvironment` through the `closeSubmissionLogicManager()` method before the app is exited to remove any temporary files that were created.
+====
+
+====
+[[fig-ProgramSubmissionSequenceDiagram]]
+.Sequence diagram of program submissions
+image::ProgramSubmissionSequence.png[]
+
+*The basic sequence of submitting a user's program for evaluation from a `UI`  component is as follows:*
+
+. Register the `UI` component as the new  `UserProgramChannel` of the `ProgramSubmissionLogicManager` through the `setProgramSubmissionChannel(channel)` method.
+. Set the _currently attempting_ question using the `setCurrentQuestion(question)` method.
+. Invoke the `submitUserProgramFromSubmissionChannel` method.
+. The user program is retrieved from the `UI` component and evaluated against the test cases of the _currently attempting_ question.
+====
+
+
+==== NotesLogic implementation
+The standard implementation of the `NotesLogic` interface is the `NotesLogicManager`. This implementation relies on `SketchManager` to handle the loading and writing of the *Sketch* png image files.
+It also stores the notes in the application in the form of a `NoteBank`. It saves any changes made to the `NoteBank` immediately using a `NoteBankStorage`.
+_(View <<Design-Storage>> for more details.)_
+
+*Overview:*
+
+[[fig-NotesLogicManagerAssociations]]
+.Associations of the NotesLogicManager
+image::NotesLogicManager.png[]
+- The `NotesLogicManager` allows other components of the application to make changes to the current state of notes using its methods.
+- Other components of the application can also observe the current state of notes by getting an `ObservableList` of all the questions in the application through the `getAllNotesList()` method.
+- Other components can also serve as sources for Notes by providing a `NoteSubmissionChannel` interface without having to introduce them as dependencies.
+
+====
+* The `NotesLogicManager` constructor takes in a `NoteBankStorage` instance which is used to load the initial `QuestionBank` and to save subsequent revisions to it.
+
+* The main bulk of the CRUD operations are handled by the `NoteBank` class. the `NotesLogicManager` orchestrate the invocation of the `QuestionBank` methods along with storage of the changes.
+
+* Note that `NoteSubmissionChannels` are required to produce a pair of values -- a `Note` and a `WritableImage` instance to represent the user's sketch for that `Note`.
+====
+
+====
+*SketchManager:*
+[[fig-SketchManagerClassDiagram]]
+.Class diagram of the SketchManager
+image::SketchManagerClassDiagram.png[]
+* Handles the saving, loading and deleting of *sketches*.
+* Deals with *sketches* in two formats, `WritableImage` class used by the JavaFX `UI` components for rendering the image, and png form in storage.
+* Converts *sketches* between the two formats upon loading/before saving.
+====
+
+====
+[[fig-NoteSavingSequence]]
+.Sequence diagram of saving a note
+image::NoteSavingSequence.png[]
+
+*The basic sequence of saving a user's note from a `UI`  component is as follows:*
+
+. Register the `UI` component as the `NoteSubmissionChannel`
+. Invoke the `saveNoteFromSubmissionChannel()` method
+. The `Note` and the *sketch* is retrieved from the `NoteSubmissionChannel`
+. The `Note` is saved by the `NoteBankStorage` while the *sketch* is saved by the `SketchManager`
+====
 
 [[Design-Model]]
 === Model component
 
-.Structure of the Model Component
-image::ModelClassDiagram.png[]
-
-*API* : link:{repoURL}/src/main/java/seedu/difficulty/model/Model.java[`Model.java`]
-
-The `Model`,
-
-* stores a `UserPref` object that represents the user's preferences.
-* stores the Duke Academy data.
-* exposes an unmodifiable `ObservableList<Question>` that can be 'observed' e.g. the UI can be bound to this list so that the UI automatically updates when the data in the list change.
-* does not depend on any of the other three components.
-
-[NOTE]
-As a more OOP model, we can store a `Tag` list in `Duke Academy`, which `Question` can reference. This would allow `Duke Academy` to only require one `Tag` object per unique `Tag`, instead of each `Question` needing their own `Tag` object. An example of how such a model may look like is given below. +
- +
-image:BetterModelClassDiagram.png[]
 
 //tag::storage[]
 
 [[Design-Storage]]
 === Storage component
 
-.Structure of the Storage Component
+.Structure of the Storage Component for Questions
 image::StorageClassDiagram.png[]
 
 *API* :
@@ -180,27 +354,7 @@ Classes used by multiple components are in the `com.dukeacademy.commons` package
 
 This section describes some noteworthy details on how certain features are implemented.
 
-// tag::submit[]
-=== [Proposed] Submit feature
-
-The submit mechanism is facilitated by `UserInterface`.
-
-The Sequence Diagram given below is an example of a scenario in which the submit command is executed when the user enters "submit" into the `CommandBox` terminal.
-
-image::submitSequenceDiagram.png[]
-
-Step 1. The user enters "submit" into the `CommandBox`.
-
-Step 2. The will call the `executeCommand()` method of the `CommandLogicManager` which will then call the `parseCommandText()` method of the `CommandParser`.
-
-Step 3. The CommandParser then calls the constructor of the Command class to create a new Command object, which is then returned to the `CommandLogicManager`.
-
-Step 4. CommandLogicManager then calls the `execute()` method of the newly created Command object.
-The UI will then retrieve the user-written code from within the `Editor` as a String to be passed onto the `ProgramSubmissionLogicManager` to be compiled as a .class file for execution.
-
-Step 5: After running the .class file, the output is then displayed to the user through the UI.
-// end::submit[]
-
+[[Implementation-ProgramEvaluation]]
 === Evaluation of user program submissions
 The evaluation of the user's programs is facilitated by the `solutions` package.
 
@@ -215,12 +369,17 @@ The method utilizes the classes `TestCase` and `UserProgram` to model the data n
 ====
 *TestCase* - stores an input and an expected value
 
-image:TestCaseClassDiagram.png[width=240]
+[[fig-TestCaseResultClassDiagram]]
+.Class diagram for TestCaseResult
+image::TestCaseClassDiagram.png[width=240]
+
 
 *UserProgram* - stores the main class name and the program's source code a String (note that the specified class name
 must match the source code for it to be successfully evaluated)
 
-image:UserProgramClassDiagram.png[width=240]
+[[fig-UserProgramClassDiagram]]
+.Class diagram for UserProgram
+image::UserProgramClassDiagram.png[width=240]
 
 ====
 
@@ -230,6 +389,8 @@ The result of the evaluation is returned as a `TestResult` object.
 *TestResult* - encapsulates all the possible outcomes of evaluating the user's program. It is composed of other model
 classes -- `TestCaseResult`, `CompileError`.
 
+[[fig-TestResultClassDiagram]]
+.Class diagram for TestResult
 image::TestResultDiagram.png[align=center]
 
 ====
@@ -258,14 +419,20 @@ Each interface has its specialized role in the evaluation process.
 *CompilerEnvironment* - in charge of creating a temporary folder in the user's file system to create and write Java files.
 This temporary folder is deleted after `closed()`. Utilizes the model class `JavaFile`.
 
+[[fig-CompilerEnvironmentAssociations]]
+.Associations of CompilerEnvironment
 image::CompilerEnvironment.png[align=center]
 
 *Compiler* - in charge of compiling the Java files into Class files at a given file path. Utilizes the model class `ClassFile`.
 
+[[fig-CompilerAssociations]]
+.Associations of Compile
 image::Compiler.png[align=center]
 
 *ProgramExecutor* - in charge of executing the compiled Class files. Utilizes the model class `ProgramOutput`.
 
+[[fig-ProgramExecutorAssociations]]
+.Associations of ProgramExecutor
 image::ProgramExecutor.png[align=center]
 
 *Models:*
@@ -278,25 +445,34 @@ an `FileNotFoundException` is thrown during instantiation.
 * *ProgramOutput* - contains the String output produced by the user's program. It also contains convenience methods for producing different outputs.
 ====
 
-====
-*Sequence diagram:*
 
-1. `TestExecutor` calls `clearEnvironment()` of `CompilerEnvironment` to remove any redundant files from previous program
+*The basic flow of a program evaluation is as follows:*
+
+. `TestExecutor` calls `clearEnvironment()` of `CompilerEnvironment` to remove any redundant files from previous program
 evaluations.
 
-2. `TestExecutor` calls `createJavaFile()` of `CompilerEnvironment` to create the Java file with the class name and source code specified
+. `TestExecutor` calls `createJavaFile()` of `CompilerEnvironment` to create the Java file with the class name and source code specified
 in the `UserProgram` argument.
 
-3. `TestExecutor` calls `compileJavaFile()` of `Compiler` to compile the newly created Java file.
+. `TestExecutor` calls `compileJavaFile()` of `Compiler` to compile the newly created Java file.
 
-4. For each test case passed in the argument, `TestExecutor` calls `executeProgram` of `StandardProgramExecutor` with the input from the
-test case.
+. For each test case passed in the argument, `TestExecutor` calls `executeProgram` of `StandardProgramExecutor` with the input from the
+test case to retrieve the `CompletableFuture` async task of running the test case.
 
-5. `TestExecutor` maps each `ProgramOutput` received into a `TestCaseResult` model instance.
+. `TestExecutor` sets a timeout on the async tasks and maps each `ProgramOutput` received into a `TestCaseResult` model instance.
 
-6. `TestExecutor` packs all the data collected from the execution of the test cases into a single `TestResult` instance.
+. `TestExecutor` packs all the data collected from the execution of the test cases into a single `TestResult` instance.
 
+[[fig-TestExecutorSequenceDiagram]]
+.Sequence diagram for the evaluation of a user's program
 image::TestExecutorSequenceDiagram.png[align:center]
+
+====
+
+Note that if the evaluation `CompletableFuture` async task timesout before it is completed, an errored `TestCaseResult` with a "Time limit exceeded!" error message is returned instead.
+
+Compile errors and runtime errors will also be reflected in the `TestResult` and `TestCaseResult` models respectively.
+
 ====
 
 ==== Implementation details
@@ -606,24 +782,6 @@ Windows, Linux, Unix, OS-X
 * Confidential program sets for technical interviews.
 * To prevent plagiarism, input code files intended for graded school assessment.
 
-[appendix]
-== Product Survey
-
-*Product Name*
-
-Author: ...
-
-Pros:
-
-* ...
-* ...
-
-Cons:
-
-* ...
-* ...
-
-[appendix]
 == Instructions for Manual Testing
 
 Given below are instructions to test the app manually.
@@ -631,42 +789,52 @@ Given below are instructions to test the app manually.
 [NOTE]
 These instructions only provide a starting point for testers to work on; testers are expected to do more _exploratory_ testing.
 
-=== Launch and Shutdown
+=== Launch
 
 . Initial launch
 
 .. Download the jar file and copy into an empty folder
 .. Double-click the jar file +
-   Expected: Shows the GUI with a set of sample contacts. The window size may not be optimum.
+   Expected: Shows the GUI with the Home tab in focus. The questions tab should contain a list of sample questions
 
-. Saving window preferences
+=== Attempting question
 
-.. Resize the window to an optimum size. Move the window to a different location. Close the window.
-.. Re-launch the app by double-clicking the jar file. +
-   Expected: The most recent window size and location is retained.
+. Attempting questions
 
-_{ more test cases ... }_
+.. Attempt a question
+.. Exit the application and reopen it. +
+   Expected: The previous attempt should have been saved automatically
 
-=== Deleting a person
+. Submitting solutions
 
-. Deleting a person while all persons are listed
+.. Attempt a question
+.. Submit the solution +
+   Expected: The application should run the solution against sample test cases and display the results
+.. Submit a solution with a compile error +
+   Expected: The application should display the compile error in the Workspace tab
+.. Submit a solution with an infinite loop +
+   Expected: The evaluation should terminate in 5 seconds and a "Time limit exceeded" error is shown
+.. Submit a solution with a runtime error +
+   Expected: The application should display the runtime error
 
-.. Prerequisites: List all persons using the `list` command. Multiple persons in the list.
-.. Test case: `delete 1` +
-   Expected: First contact is deleted from the list. Details of the deleted contact shown in the status message. Timestamp in the status bar is updated.
-.. Test case: `delete 0` +
-   Expected: No person is deleted. Error details shown in the status message. Status bar remains the same.
-.. Other incorrect delete commands to try: `delete`, `delete x` (where x is larger than the list size) _{give more}_ +
-   Expected: Similar to previous.
+=== Creating notes
 
-_{ more test cases ... }_
+. Creating notes
+.. Create a new note +
+   Expected: +
+   The new note should be loaded into the Notes tab +
+   The sketchpad should be available for drawing +
+   The note text input should also be available for editing
 
-=== Saving data
+. Deleting notes
+.. Delete a note +
+   Expected: The new note should no longer be reflected in the GUI
 
-. Dealing with missing/corrupted data files
-
-.. _{explain how to simulate a missing/corrupted file and the expected behavior}_
-
-_{ more test cases ... }_
+. Saving notes
+.. Create a new note
+.. Edit the note however you like
+.. Save the note
+.. Restart the app +
+   Expected: The changes to the note should be saved and reflected in the app
 
 //end::appendix[]
