--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -1550,6 +1550,9 @@ In the Address Book Achievements, you will be able to see:
 *Q:* Is it advisable to edit the storage files in _TravEzy_ so that the changes will be reflected when I start the application? +
 *A:* _TravEzy_ gives you a caveat and strongly advise against tempering with the storage files in _TravEzy_ as this could result in falsification of the data.
 
+*Q:* Why are there data which I did not included when I first startup _TravEzy_?
+*A:* Being a new user, _TravEzy_ will provide you with some sample data to experiment first before you start using _TravEzy_ proper. Hope that you will enjoy using _TravEzy_.
+
 *Q:* What are some of the cool features that are available in TravEzy currently? +
 *A:* TravEzy currently boast a plethora of features such as calendar, itinerary, address book, travelling diary, financial tracker and achievements page. All these features work in tandem with each other to give you the best and only the best travelling experience. Not only that, the TravEzy team also decided to spice things up and included some easter eggs scattered throughout the
 application for users to discuss and discover. Hope that you have fun finding these cool easter egg features! 🐰🐰🐰
